@@ -171,28 +171,17 @@ class MEDDLY::dd_edge {
 
         /**
             Write the edge information to a file (stream).
-            OLD VERSION.
                 @param  s       Stream to write to
-                @param  map     Mapping for non-terminal handles,
-                                or null for identity mapping.
-        */
-        void write(output &s, node_handle* map) const;
-
-        /**
-            Write the edge information to a file (stream).
-                @param  s       Stream to write to
-                @param  map     Mapping for non-terminal handles,
-                                or null for identity mapping.
+                @param  map     Translation from node handle to file node#
         */
         void write(output &s, const std::vector <unsigned> &map) const;
 
         /**
             Read the edge information from a file (stream).
                 @param  s       Stream to read from
-                @param  map     Mapping for non-terminal handles,
-                                or null for identity mapping.
+                @param  map     Translation from file node# to node handle
         */
-        void read(input &s, node_handle* map);
+        void read(input &s, const std::vector <node_handle> &map);
 
         //
         // Methods that will soon be replaced?
